--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:logo="@drawable/headerlogo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -21,16 +21,18 @@
             </intent-filter>
         </activity>
         <activity
+            android:parentActivityName="com.android.eindopdracht.MainActivity"
             android:name=".DisplayActivity"
-            android:label="@string/title_activity_display" >
+            android:label="@string/app_name" >
         </activity>
         <activity
             android:name=".DetailActivity"
-            android:label="@string/title_activity_detail" >
+            android:label="@string/app_name" >
         </activity>
         <activity
+            android:parentActivityName="com.android.eindopdracht.MainActivity"
             android:name=".SettingsActivity"
-            android:label="@string/title_activity_settings" >
+            android:label="@string/app_name" >
         </activity>
     </application>
 
